# zephyr

./: .gitignore  .gitlab-ci.yml
arch/arm/soc/nxp_kinetis/kwx/: CMakeLists.txt  Kconfig.defconfig.mkw41z4  Kconfig.series  power.c  soc_kw4xz.c  soc_power.h
boards/arm/akita_gen2/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  akita_gen2.dts  board.cmake  board.h  dts.fixup  frdm_kw41z.yaml  pinmux.c
boards/arm/akita_gen2/doc/: akita_gen2.rst
boards/arm/akita_gen2_devboard/: Kconfig.board  Kconfig.defconfig  akita_gen2_devboard.dts  akita_gen2_devboard.yaml  akita_gen2_devboard_defconfig  board.h  dts.fixup  pinmux.c
boards/arm/akita_gen2_devboard/doc/: akita_gen2_devboard.rst
boards/arm/frdm_kw41z/: dts.fixup  frdm_kw41z.dts
drivers/flash/: CMakeLists.txt  Kconfig  spi_flash_w25qxxxx.c  spi_flash_w25qxxxx.h  spi_flash_w25qxxxx_defs.h
drivers/ieee802154/: Kconfig.kw41z  ieee802154_kw41z.c
drivers/rtc/: rtc_mcux.c
drivers/sensor/lis3dh/: CMakeLists.txt  Kconfig  lis3dh.c  lis3dh.h  lis3dh_manual_trigger.c  lis3dh_trigger.c
drivers/timer/: cortex_m_systick.c
drivers/watchdog/: Kconfig  Kconfig.mkwx
dts/bindings/rtc/: nxp,kinetis-rtc.yaml  rtc.yaml
dts/bindings/sensor/: st,lis3dh.yaml
include/net/: radio.h  radio_types.h
samples/batmon/src/: main.c
samples/boards/kw41z/lpm_idle/: prj.conf  sample.yaml
samples/boards/kw41z/lpm_idle/src/: main.c
samples/boards/kw41z/model/: prj.conf
samples/boards/kw41z/model/src/: main.c
samples/drivers/adc_batmon/: prj.conf
samples/drivers/adc_batmon/src/: main.c
samples/drivers/spi_flash/src/: main.c
samples/json/: prj.conf
samples/json/src/: main.c
samples/nanopb/: CMakeLists.txt  README.rst  sample.yaml
samples/nanopb/ext/blik/: CMakeLists.txt  blik.proto
samples/nanopb/ext/nanopb_syshdr/: pb_syshdr.h
samples/nanopb/src/: main.c
samples/net/mac/: prj.conf
samples/net/mac/src/: main.c
samples/nffs/: CMakeLists.txt  prj.conf
samples/nffs/src/: main.c
samples/sensor/lis3dh/: README.rst  prj.conf  sample.yaml
samples/sensor/lis3dh-manual/: README.rst  prj.conf  sample.yaml
samples/sensor/lis3dh-manual/src/: main.c
samples/sensor/lis3dh/src/: main.c
samples/watchdog/: CMakeLists.txt  prj.conf
samples/watchdog/src/: main.c
tests/subsys/fs/nffs_fs_api/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/fs/nffs_fs_api/src/: main.c  nffs_test_utils.c  test_corrupt_scratch.c
